Add --add-opens parameters to bootloader